OpenVi 7.0.9 -> OpenVi 7.0.10-dev (Unreleased): Tue Feb 1 04:50:29 2022
        + Convert tabs to spaces and adjust indentation with `cppi`

OpenVi 7.0.8 -> OpenVi 7.0.9: Mon Jan 31 21:43:08 2022
        + Add a missing include to fix compilation on Void Linux with musl libc
        + Update `README.md`

OpenVi 7.0.7 -> OpenVi 7.0.8: Mon Jan 31 10:12:53 2022
        + Rework `README.md`
        + Drop `-pipe` and `-fomit-frame-pointer` defaults for wider compatibility
        + Add support for building on macOS; tested on 12.1/x86_64 (21C5021h)
        + Add support for building on OpenBSD; tested on 7.0-current/ARM64
        + Normalize licensing text, acknowledgements, and copyright statements
        + Normalize macro defines and conditional if/ifdef/ifndef's with `cppi`
        + Add support for building on FreeBSD; tested on 13.0-RELEASE-p6/ARM64
        + Minor code clean-up
        + Drop memmove wrapper macro (for old systems with bcopy but no memmove)
        + Add support for building with musl libc
        + Add `imctrl` and `imkey` options, inspired by `cannactrl` and `fepkey`
          options in `nvi-m17n` by itojun. If `imctrl` option is set, the input
          method is controlled by using escape sequences compatible with Tera
          Term and RLogin. The state of the input method in commands specified
          by imkey option is saved and restored automatically. This input method
          is deactivated upon returning to command mode; this implementation
          taken from NetBSD-current's `contrib/nvi`
        + Improve `make` output and use more logical compilation order
        + Add `virecover.8` man page adapted from NetBSD
        + Add a missing break in `common/log.c`
        + Avoid undefined behavior in `*BIT` macros; patch from NetBSD; also
          apply patch from NetBSD for PR bin/52716
        + Update `.gitignore` and `.gitattributes`

OpenVi 7.0.6 -> OpenVi 7.0.7: Fri Jan 28 16:33:22 2022